# ayatana-indicator-bluetooth

./: .build.yml  .bzrignore  AUTHORS  CMakeLists.txt  ChangeLog  INSTALL.md  Makefile.am  NEWS  README.md  autogen.sh  config.h.in  configure.ac
data/: CMakeLists.txt  Makefile.am  ayatana-indicator-bluetooth.conf.in  ayatana-indicator-bluetooth.desktop.in  ayatana-indicator-bluetooth.service.in  com.canonical.indicator.bluetooth  indicator-bluetooth.desktop.in  indicator-bluetooth.service.in  org.ayatana.indicator.bluetooth  org.ayatana.indicator.bluetooth.gschema.xml  org.ayatana.indicator.bluetooth.gschema.xml.in
data/upstart/: Makefile.am  indicator-bluetooth.desktop.in
debian/: ayatana-indicator-bluetooth.links  changelog  control  copyright  copyright.in  rules  watch
debian/upstream/: metadata
po/: LINGUAS  POTFILES.in  POTFILES.skip  aa.po  af.po  am.po  an.po  ar.po  as.po  ast.po  ayatana-indicator-bluetooth.pot  az.po  be.po  bem.po  bg.po  bn.po  bo.po  br.po  bs.po  ca.po  ca@valencia.po  ce.po  ckb.po  co.po  crh.po  cs.po  csb.po  cv.po  cy.po  da.po  de.po  dv.po  el.po  en_AU.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  (+102 more)
src/: CMakeLists.txt  Makefile.am  agent.vala  bluetooth.vala  bluez.vala  desktop.vala  desktop_greeter.vala  device.vala  gnome-bluetooth-1.0.vapi  greeter.vala  indicator-bluetooth-service.vala  indicator-bluetooth.vala  killswitch.vala  libido3-0.1.vapi  main.vala  menu.vala  org-bluez.vala  phone.vala  phone_greeter.vala  profile.vala  rfkill.vala  service.vala
vapi/: lomiri-url-dispatcher.vapi
